fix: remove nested transactions from password rotation (#520)
* fix: avoid nested transactions for password rotation

* fix: conditional DDL

* docs: regenerate OpenAPI spec